LIST OF CHANGES
---------------

release 47.2
 - don't process phix using the p4 pipeline

release 47.1
 - when using and copying an existing cache directory copy everything (instead of
   restricting to npg directory)
 - try to create samplesheet if it does not exist, even if copying cache

release 47.0
 - code moved to git repository

release 46.3
 - test fix

release 46.2
 - use samtools1.1 in seq_alignment P4 based analyses
 - externally specified webcache and samplesheet are copied to the default location
     inside the analysis folder
 - seqchksum primary data comparison between final product and post illumina2bam
 - run seqchksum and cluster count check at same time as post bam qc
 - tag list files creation:
     remove dedicated function
     call the code from illumina2bam function
     refactor into a stand-alone per-lane module
     create these files in the metadata cache directory
 - allow ref_match qc jobs to run 8 at a time (patched Bowtie ameliorates Lustre problem)
 - use subtemplate/library base templates rather than monolith ones for seq_alignment P4
 - do not run lane level pulldown_metrics job for a pool
 - extra seq_alignment check that run is compatible with available P4 pipelines
 - limit bam split by tag to lanes requested (fix)

release 46.1
 - for V4 HiSeq runs without a reference use bam_alignment.pl

release 46.0
 - remove redundant npg_pipeline::archive and npg_pipeline::roles::business::file_constructs modules
 - remove dependency on tag files npg_common::roles::run::lane::tag_info role
 - remove a callback for a phix flavour of the sequence error check (function is not in use)
 - move options for the adapter detection job to where the job is generated
 - error is thrown for non-existing qc check
 - remove generation of tag files (tag list files remain)
 - always create new tag list files
 - remove unused configuration options
 - remove --lane pipeline option (was used only in tests)