@@ -14,6 +14,7 @@ use npg_tracking::data::transcriptome;
 use npg_pipeline::lsf_job;
 use npg_common::roles::software_location;
 use st::api::lims;
+use List::Util qw(sum);
 extends q{npg_pipeline::base};
 
 our $VERSION  = '0';
@@ -167,10 +168,13 @@ sub _lsf_alignment_command {
     #TODO: support these various options in P4 analyses
     croak qq{only paired reads supported ($name_root)} if not $self->is_paired_read;
     croak qq{nonconsented human split not yet supported ($name_root)} if $l->contains_nonconsented_human;
-    croak qq{nonconsented X and autosome human split not yet supported ($name_root)} if $l->contains_nonconsented_xahuman;
     croak qq{No alignments in bam not yet supported ($name_root)} if not $l->alignments_in_bam;
+    croak qq{Only one of nonconsented X and autosome human split, separate Y chromosome data, and nonconsented human split may be specified ($name_root)} if (1 < sum $l->contains_nonconsented_xahuman, $l->separate_y_chromosome_data, $l->contains_nonconsented_human);
+    my $human_split = $l->contains_nonconsented_xahuman ? q(xahuman) :
+                      $l->separate_y_chromosome_data    ? q(yhuman) :
+                      q();
     croak qq{Reference required ($name_root)} if not $self->_ref($l,q(fasta));
-    return join q( ),    q(bash -c '),
+    return join q( ), grep {length} q(bash -c '),
                            q(mkdir -p), (join q{/}, $self->archive_path, q{tmp_$}.q{LSB_JOBID}, $name_root) ,q{;},
                            q(cd), (join q{/}, $self->archive_path, q{tmp_$}.q{LSB_JOBID}, $name_root) ,q{&&},
                            q(vtfp.pl -s),
@@ -195,7 +199,8 @@ sub _lsf_alignment_command {
                                   q(-keys bwa_executable -vals bwa0_6),
                                   q(-keys alignment_method -vals bwa_mem),
                              ) ),
-                             ($l->separate_y_chromosome_data ? q(-keys final_output_prep_target_name -vals split_by_chromosome -keys split_bam_by_chromosome_flags -vals S=Y -keys split_bam_by_chromosome_flags -vals V=true -keys split_indicator -vals _yhuman) : q()),
+                             ($human_split ? qq(-keys final_output_prep_target_name -vals split_by_chromosome -keys split_indicator -vals _$human_split) : q()),
+                             ($l->separate_y_chromosome_data ? q(-keys split_bam_by_chromosome_flags -vals S=Y -keys split_bam_by_chromosome_flags -vals V=true) : q()),
                              q{$}.q{(dirname $}.q{(dirname $}.q{(readlink -f $}.q{(which vtfp.pl))))/data/vtlib/alignment_wtsi_stage2_template.json},
                              qq(> run_$name_root.json),
                            q{&&},
@@ -218,15 +223,15 @@ sub _lsf_alignment_command {
                              ($is_plex ? ($tag_index) : ()),
                              $qcpath,
                            q{&&},
-                           $l->separate_y_chromosome_data ? (
-                           q{perl -e '"'"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$}.q{o=npg_qc::autoqc::results::bam_flagstats->new(human_split=>q(yhuman), id_run=>$}.q{ARGV[2], position=>$}.q{ARGV[3]}.($is_plex?q{, tag_index=>$}.q{ARGV[4]}:q()).q{); $}.q{o->parsing_metrics_file($}.q{ARGV[0]); open my$}.q{fh,q(<),$}.q{ARGV[1]; $}.q{o->parsing_flagstats($}.q{fh); close$}.q{fh; $}.q{o->store($}.q{ARGV[-1]) '"'"'},
-                             (join q{/}, $archive_path, $name_root.q(_yhuman.markdups_metrics.txt)),
-                             (join q{/}, $archive_path, $name_root.q(_yhuman.flagstat)),
+                           $human_split ? (
+                           q{perl -e '"'"'use strict; use autodie; use npg_qc::autoqc::results::bam_flagstats; my$}.q{o=npg_qc::autoqc::results::bam_flagstats->new(human_split=>q(}.$human_split.q{), id_run=>$}.q{ARGV[2], position=>$}.q{ARGV[3]}.($is_plex?q{, tag_index=>$}.q{ARGV[4]}:q()).q{); $}.q{o->parsing_metrics_file($}.q{ARGV[0]); open my$}.q{fh,q(<),$}.q{ARGV[1]; $}.q{o->parsing_flagstats($}.q{fh); close$}.q{fh; $}.q{o->store($}.q{ARGV[-1]) '"'"'},
+                             (join q{/}, $archive_path, $name_root.q(_).$human_split.q(.markdups_metrics.txt)),
+                             (join q{/}, $archive_path, $name_root.q(_).$human_split.q(.flagstat)),
                              $self->id_run,
                              $position,
                              ($is_plex ? ($tag_index) : ()),
                              $qcpath,
-                           q{&&}) 
+                           q{&&})
                               :(),
                            q{qc --check alignment_filter_metrics --qc_in $}.q{PWD --id_run}, $self->id_run, qq{--position $position --qc_out $qcpath}, ($is_plex ? (qq{--tag_index $tag_index}) : ()),
                          q(');
